--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <form action="https://formsubmit.co/Melipil5780@gmail.com.COM" method="POST" enctype="multipart/form-data">
+    <form action="https://formsubmit.co/Melipil5780@gmail.com" method="POST" enctype="multipart/form-data">
         <h2>Get in Touch</h2>
         <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="email" placeholder="Email" required>
