--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
     <title>Contact Us</title>
@@ -8,11 +8,11 @@
         input, textarea { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
         button { width: 100%; padding: 12px; background: #27ae60; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
         button:hover { background: #219150; }
-        label { font-size: 14px; color: #666; }
+        label { font-size: 14px; color: #666; display: block; margin-top: 10px; }
     </style>
 </head>
 <body>
-    <form action="https://formsubmit.co/Melipil5780@gmail.com" method="POST" enctype="multipart/form-data">
+    <form action="https://formsubmit.co/melipil5780@gmail.com" method="POST" enctype="multipart/form-data">
         <h2>Get in Touch</h2>
         
         <input type="text" name="name" placeholder="Your Name" required>
@@ -24,8 +24,11 @@
         <input type="file" name="attachment" accept="image/*">
 
         <input type="hidden" name="_next" value="https://Melipil.github.io/my-quotes/thanks.html">
-        <input type="hidden" name="_subject" value="New Website Inquiry!">
-        <input type="hidden" name="_captcha" value="false"> <button type="submit">Send Message</button>
+        <input type="hidden" name="_subject" value="New Message from Therapist Site!">
+        
+        <input type="hidden" name="_captcha" value="false">
+
+        <button type="submit">Send Message</button>
     </form>
 </body>
 </html>
